# django-jukebox

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-app.yml
src/: manage
src/django_jukebox/accounts/: urls.py
src/django_jukebox/includes/: extra_context.py  json.py
src/django_jukebox/juke_daemon/: daemon.py
src/django_jukebox/juke_daemon/management/commands/: juke_daemon.py  random_requester.py
src/django_jukebox/juketunes_ui/: urls.py
src/django_jukebox/juketunes_ui/views/: ajax.py  main.py
src/django_jukebox/music_db/: admin.py  importer_funcs.py  managers.py  models.py
src/django_jukebox/music_db/management/commands/: import_music_directory.py
src/django_jukebox/music_player/: admin.py  managers.py  models.py  random_requester.py  urls.py  views.py
src/django_jukebox/music_player/templates/: index.html  song_search.html  song_upload.html
src/django_jukebox_host/: pyproject.toml  settings.py  urls.py
src/django_jukebox_host/templates/: standard.html
src/django_jukebox_host/wrapping_paper/: __init__.py  configurator.py
src/django_jukebox_manage/: __init__.py
