[tool.poetry]
name = "django-jukebox"
version = "0.1.0"
description = ""
authors = ["Paige <paige@paige.bio>"]
readme = "README.md"
packages = [{include = "django_jukebox", from = "src"},  {include = "django_jukebox_host", from = "src"}, {include = "django_jukebox_manage", from = "src"}]

[tool.poetry.dependencies]
django = "*"
django-extensions = "*"
mutagen = "*"
python-daemon = "*"
django-otp = "*"
simplejson = "*"
python-ldap = "*"
django-bower = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
autopep8 = "*"
ipython = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
django_jukebox_admin = "django_jukebox_manage:main"
django_jukebox_daemon = "django_jukebox.juke_daemon:daemon_loop"
