[tool.poetry]
name = "django-jukebox"
version = "0.1.0"
description = ""
authors = ["Paige <paige@paige.bio>"]
readme = "README.md"
packages = [{include = "django_jukebox", from = "src"},  {include = "django_jukebox_host", from = "src"}, {include = "django_jukebox_manage", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.8"
mutagen = "*"
python-daemon = "*"
django-otp = "*"
simplejson = "*"
django = "^4.1.7"
django-extensions = "^3.2.1"
django-bower = "^5.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "*"
autopep8 = "*"
ipython = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
django_jukebox_admin = "django_jukebox_manage:main"
django_jukebox_daemon = "django_jukebox.juke_daemon:daemon_loop"
