[tool.poetry]
name = "django-jukebox"
version = "0.1.0"
description = "A web-based jukebox in Django, forked from https://code.google.com/archive/p/django-jukebox/"
authors = ["Michael Farrell"]
readme = "README.md"
packages = [{include = "django_jukebox", from = "src"},  {include = "django_jukebox_host", from = "src"}, {include = "django_jukebox_manage", from = "src"}]
include = [{path = "django_jukebox_host/pyproject.toml", format = "sdist"}]

[tool.poetry.dependencies]
python = ">=3.8"
django = "^4.1.7"
django-extensions = "^3.2.1"
django-bower = "^5.2.0"
django-otp = "^1.1.4"
mutagen = "^1.46.0"
python-daemon = "^3.0.1"
simplejson = "^3.18.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
autopep8 = "^2.0.1"
ipython = "^8.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
django_jukebox_admin = "django_jukebox_manage:main"
django_jukebox_daemon = "django_jukebox.juke_daemon:daemon_loop"
